# autonomize-healthcare-ai-demo

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: cases.md  review-all.md  review.md
.claude/plans/: autonomize-architecture-alignment.md  autonomize-architecture-alignment.original.md  demo-implementation-prompt.md  jazzy-snacking-mist.md  melodic-chasing-hoare.md  shared-context.md  simplify-architecture-pivot.md  step-1-core-engine.md  step-2-rest-api.md  step-3-web-dashboard.md  step-4-azure-deploy.md  step-5-managed-services.md
.claude/rules/: architecture.md  coding-standards.md  healthcare-standards.md
.github/: copilot-instructions.md
.github/instructions/: code-review.instructions.md
.github/workflows/: ci.yml
data/reference/: README.md  cms_coverage_criteria.json  icd10cm_codes_2026.tsv
data/sample_pa_cases/: 01_lumbar_mri_clear_approval.json  02_cosmetic_rhinoplasty_denial.json  03_spinal_fusion_complex_review.json  04_humira_missing_documentation.json  05_keytruda_urgent_oncology.json  README.md
data/synthea_fhir_patients/: README.md
docs/: README.md  ai-tooling.md  architecture.md  uat-guide.md  uat-log.md  user-guide.md  user-stories.md
docs/architecture/: decisions.md  presentation.md  requirements-traceability.md  research-context.md  slide-generation-prompts.md  solution-architecture.md  speaker-script.md
docs/inputs/: assignment.md  job-description.md  stakeholder-profiles.md
docs/interview-prep/: email-draft.md  pre-show-checklist.md  quick-reference.md  study-guide.md
docs/plans/: 2026-03-24-demo-implementation-design.md  2026-03-25-reliable-pptx-generation.md  execution-log.md  human-tasks.md
docs/presentation/: autonomize-ai-pa-solution-architecture-paul-prae-2026-03-24.docx  autonomize-ai-pa-solution-architecture-paul-prae-2026-03-24.pptx  autonomize-ai-pa-solution-architecture-paul-prae-2026-03-25-1432.docx  autonomize-ai-pa-solution-architecture-paul-prae-2026-03-25-1432.pptx  autonomize-ai-pa-solution-architecture-paul-prae-2026-03-25-1516.docx  autonomize-ai-pa-solution-architecture-paul-prae-2026-03-25-1516.pptx  autonomize-ai-pa-solution-architecture-paul-prae-2026-03-25-1540.pptx  demo-script.md  presentation.md  (+9 more)
scripts/: generate-deck.ts  generate_deck.py
src/: bedrock_client.py  config.py  dashboard.py  database.py  kafka_utils.py  main.py  models.py  pa_processor.py
tests/: conftest.py  sample_requests.http  test_clinical_review_engine.py  test_data_quality.py  test_determination_audit_store.py  test_docker_infrastructure.py  test_e2e.py  test_e2e_api_review.py  test_e2e_clinical_review.py  test_fhir_server_integration.py  test_healthcare_api_server.py  test_web_dashboard.py
(+35 files in other folders)
