[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prior-auth-demo"
version = "0.3.0"
description = "AI-driven prior authorization review demo using Claude, FHIR R4, and evidence-based clinical guidelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Paul Prae", email = "paul@paulprae.com" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
    "fhir.resources>=8.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "python-pptx>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.0",
    "mypy>=1.13.0",
    "polyfactory>=2.0.0",
    "pre-commit>=4.0.0",
    "pytest-timeout>=2.3.0",
]

[project.scripts]
pa-review = "prior_auth_demo.command_line_demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prior_auth_demo"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E501"]  # slide content strings are naturally long

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require external services)",
    "e2e: End-to-end tests (full system)",
]
